css/styles.css
/* ... */
a, button{
    cursor: pointer;
    text-decoration: none;
}
*:focus{
    outline: none !important;
}
abbr[title],
abbr[data-original-title]{
    border: 0;
}
/**/
/* ## defaults */
/**/
body, a{
    color: #3a3a3a;
}
body{
    font-size: 16px;
    font-family: Work Sans;
    line-height: 1.6;
    font-weight: 300;
    background-color: #ffffff;
}
img{
    max-width: 100%;
    height: auto;
}
section{
    display:block;
    margin:0;
    padding:0
}
p{
    margin-bottom: 1.3em;
}
p.white{
    color: #ffffff;
}
h1, h2, h3, h4, h5, h6 {
    margin-bottom: 1.3em;
    line-height: 1.4;
    font-weight: 400;
    margin-top: 0;
}
h1{ 
    font-size: 48px;
}
h2 {
    font-size: 44px;
} 
h3 {
    font-size: 40px;
} 
h4 {
    font-size: 36px;
} 
h5 {
    font-size: 33px;
} 
h6 {
    font-size: 30px;
} 
ul{
    padding: 0;
}
textarea{
    overflow: hidden;
}
button{
    color: #fff;
}
label{
    display: inline;
    font-weight: normal;
}
label:focus{
    border: none;
}
select{
    width: 100%;
    padding: 4px 8px;
    border-color: #c7d5d3;
    background: transparent;
    -webkit-border-radius: 3px;
    -moz-border-radius: 3px;
    border-radius: 3px;
    appearance: none;
    -webkit-appearance: none;
    -moz-appearance: none;
    cursor: pointer;
}
strong{
    font-weight: normal;
}
ins.ins-1{
    text-decoration: none;
    background-color: #c7d5d3; 
}
ins.ins-2{
    text-decoration: none;
}
.page{
    overflow: hidden;
}
.selection-box{
    position: relative;
}
.selection-box:before{
    content: " ";
    pointer-events: none;
    position: absolute;
    z-index: 2;
    right: 13px;
    top: 3px;
    bottom: 0;
    height: 0;
    margin: auto;
    border-left: 6px solid transparent;
    border-right: 6px solid transparent;
    border-top: 6px solid #c7d5d3;
}
.selection-box:after{
    content: " ";
    pointer-events: none;
    position: absolute; 
    z-index: 1; 
    width: 36px;
    height: 26px;
    right: 0px;
    top: 1px;
    margin: 5px 0;
    border-left: 1px solid #c7d5d3;
}
.select-title{
    font-size: 30px;
    margin-bottom: 5px;
}
.select-title span{
    font-size: 17px;
    vertical-align: text-top;
    color: #c7d5d3;
}
.section-title {
    margin-bottom: 10px;
    margin-top: 0;
    padding-bottom: 15px;
    font-size: 48px;
    font-weight: 600 !important;
    text-align: center;
    line-height: 1.3;
    z-index: 4;
    position: relative;
    letter-spacing: 1px;
}
.section-title span{
    color: #627d5a;
}
.shop-info-title {
    margin-bottom: 0;
    margin-top: 0;
    padding-bottom: 0;
    font-size: 48px;
    font-weight: 600 !important;
    text-align: left;
    line-height: 1.3;
    z-index: 4;
    position: relative;
}
.section-title span{
    display: block;
    position: relative;
    font-family: Bilbo Swash Caps;
    font-size: 26px;
    font-weight: 400;
}
.section-title.white{
    color: #ffffff;
}
.banner-title{
    font-size: 48px;
    margin-bottom: 30px;
    line-height: 0.7;
}
.title-under > *{
    display: inline-block;
}
.title-under h3{
    font-size: 20px;
    border-bottom: 1px solid;
    line-height: 1;
    margin-bottom: 0;
    -webkit-transition: all 0.3s;
    -moz-transition: all 0.3s;
    -o-transition: all 0.3s;
    -ms-transition: all 0.3s;
    transition: all 0.3s;
}
.title-under a:hover h3{
    color: #8fdba3;
}
.title-under.alt h3{
    font-size: 15px;
    border-bottom: 1px solid;
    margin-bottom: 10px;
}
.title-under .img-line{
    margin: 0 15px;
}
.bottom-line.section-title span:before,
.bottom-line.section-title span:after{
    content: ' ';
    display: inline-block;
    vertical-align: middle;
    top: 50%;
    width: 90px;
    height: 1px;
    background: #627d5a;
}
.bottom-line.section-title span:before{
   margin-right: 10px;
}
.bottom-line.section-title span:after{
    margin-left: 10px;    
}
.bottom-line.long.section-title span:before,
.bottom-line.long.section-title span:after{
    width: 100px;
}
.section-text {
    font-weight: 300;
}
.section-text.white {
    color: #ffffff;
}
.gradient-line{
    position: relative;
    z-index: 1;
    width: 100%;
    height: 1px;
    background: radial-gradient(circle closest-corner at 50% 1px, #fff, transparent);
}
img.img-border{
    border: 1px solid #c7d5d3;
    padding: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    border-radius: 10px;
    display: block;
    margin: auto;
}
.img-line{
    line-height: 0;
}
.img-line.alt-1 img{
    width: 26px;
}
audio {
    min-width: 0;
    width: 100%;
    max-width: 100%;
}
blockquote{
    border: none;
    position: relative;
    font-size: 17px;
    font-style: italic;
    padding: 0 0 7px 50px;
    margin: 0;
}
blockquote:before{
    content: '“';
    position: absolute;
    z-index: 1;
    top: -8px;
    left: 0;
    font-size: 100px;
    font-family: Philosopher;
    font-style: normal;
    line-height: 1;
}
blockquote p{
    padding-bottom: 15px;
    position: relative;
}
blockquote p:after{
    content: ' ';
    position: absolute;
    bottom: 0;
    left: 0;
    z-index: 1;
    width: 30px;
    height: 2px;
    background-color: #c7d5d3;
}
blockquote p.align-center:after{
    left: 50%;
    margin-left: -40px;
}
blockquote footer{
    font-size: 17px;
    color: #c7d5d3;
    font-style: normal;
    padding-right: 50px;
}
blockquote footer:before{
    content: ' ';
}
/*##############################################################
                            ## LAYOUT
##############################################################*/

.uppercase{
    text-transform: uppercase;
    font-weight: 600;
}
.align-center{ text-align:center !important;}
.align-left{ text-align:left !important;}
.align-right{ text-align:right !important;}
.left{float:left !important;}
.right{float:right !important;}
.relative{position:relative;z-index: 2;}
.hidden{display:none;}
.inline-block{display:inline-block;}
.italic{
    font-style: italic;
    color: #9b9b9b;
}
.fsize-0{
    font-size: 0;
}
/* ... */

